--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,3 @@
-# title: Just the Docs Template
-# description: A starter template for a Jeykll site using the Just the Docs theme!
-# theme: just-the-docs
-
-# url: https://just-the-docs.github.io
-
-# aux_links:
-#   Template Repository: https://github.com/just-the-docs/just-the-docs-template
-
-
 # Welcome to Jekyll!
 #
 # This config file is meant for settings that affect your whole site, values
@@ -25,6 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Learning with Examples
 description: A collection of examples to help you learn and understand various concepts.
+theme: just-the-docs
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://learningexamples.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 repository: LearningExamples/learning-examples.github.io
