--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ exclude:
 
 # Set a path/url to a logo that will be displayed instead of the title
 # logo: "/assets/images/just-the-docs.png"
-logo: "/assets/images/logo.png"
+# logo: "/assets/images/logo.png"
 
 # Enable or disable the site search
 # Supports true (default) or false
