--- a/_config.yml
+++ b/_config.yml
@@ -112,9 +112,9 @@ mermaid:
 heading_anchors: true
 
 # Aux links for the upper right navigation
-aux_links:
-  "Just the Docs on GitHub":
-    - "https://github.com/learningexamples/learningexamples.github.io"
+# aux_links:
+#   "Just the Docs on GitHub":
+#     - "https://github.com/learningexamples/learningexamples.github.io"
 
 # Makes Aux links open in a new tab. Default is false
 aux_links_new_tab: true
@@ -125,7 +125,7 @@ nav_enabled: true
 
 # Sort order for navigation links
 # nav_sort: case_insensitive # default, equivalent to nil
-nav_sort: case_sensitive # Capital letters sorted before lowercase
+# nav_sort: case_sensitive # Capital letters sorted before lowercase
 
 # External navigation links
 nav_external_links:
